cabal-version: >=1.10

name: Jsoff
version: 0.0.1.0
synopsis: A Json Parser.
description:
    There's nothing extra ordinary about this library. I just implemented it for fun.
author: Adrian Gabriel
license: BSD3
license-file: LICENSE
category: Json
build-type: Simple

library
    exposed-modules:
        Jsoff
        Jsoff.Number
        Jsoff.String
    hs-source-dirs: 
        src
  -- other-modules:
  -- other-extensions:
    build-depends:
        base >=4.14 && <4.15
      , Parsix
  -- hs-source-dirs:
    default-language: Haskell2010

test-suite test
    main-is: Spec.hs
    hs-source-dirs:
        test
    build-depends:
        base >=4.14 && <4.15
      , QuickCheck
      , hspec
      , Parsix
    default-language: Haskell2010
